unistd include path

--- a/ispc.vcxproj
+++ b/ispc.vcxproj
@@ -82,8 +82,8 @@
       <DisableSpecificWarnings>4146;4800;4996;4355;4624;4005;4065</DisableSpecificWarnings>
     </ClCompile>
     <CustomBuild Include="builtins\builtins.c">
-      <Command>%LLVM_INSTALL_DIR%\bin\clang --target=i386-unknown-freebsd -m32 -emit-llvm builtins\builtins.c -c -o - | %LLVM_INSTALL_DIR%\bin\llvm-dis - | python bitcode2cpp.py c 32 &gt; $(Configuration)/gen-bitcode-c-32.cpp;
-%LLVM_INSTALL_DIR%\bin\clang --target=x86_64-unknown-freebsd -m64 -emit-llvm builtins\builtins.c -c -o - | %LLVM_INSTALL_DIR%\bin\llvm-dis - | python bitcode2cpp.py c 64 &gt; $(Configuration)/gen-bitcode-c-64.cpp</Command>
+      <Command>%LLVM_INSTALL_DIR%\bin\clang --target=i386-unknown-freebsd -m32 -IC:\cygwin\usr\include -emit-llvm builtins\builtins.c -c -o - | %LLVM_INSTALL_DIR%\bin\llvm-dis - | python bitcode2cpp.py c 32 &gt; $(Configuration)/gen-bitcode-c-32.cpp;
+%LLVM_INSTALL_DIR%\bin\clang --target=x86_64-unknown-freebsd -m64 -IC:\cygwin\usr\include -emit-llvm builtins\builtins.c -c -o - | %LLVM_INSTALL_DIR%\bin\llvm-dis - | python bitcode2cpp.py c 64 &gt; $(Configuration)/gen-bitcode-c-64.cpp</Command>
       <Message>Building builtins.c</Message>
       <Outputs>$(Configuration)/gen-bitcode-c-32.cpp;$(Configuration)/gen-bitcode-c-64.cpp</Outputs>
     </CustomBuild>
