Enable different package name for PS4 build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -343,7 +343,11 @@ if (ISPC_PREPARE_PACKAGE)
     # CPack configuration
     if (WIN32)
         set(CPACK_GENERATOR "ZIP")
-        set(ISPC_SYSTEM_NAME "windows")
+        if (ISPC_PS4)
+            set(ISPC_SYSTEM_NAME "ps4-win-cross")
+        else()
+            set(ISPC_SYSTEM_NAME "windows")
+        endif()
     else()
         set(CPACK_GENERATOR "TGZ")
         if (APPLE)
