--- a/.github/workflows/win-test.yml
+++ b/.github/workflows/win-test.yml
@@ -14,7 +14,7 @@ env:
 
 jobs:
   win-build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v2
