--- a/.github/workflows/win-test.yml
+++ b/.github/workflows/win-test.yml
@@ -24,6 +24,7 @@ jobs:
     - name: Install dependencies
       shell: powershell
       run: |
+        $ProgressPreference = 'SilentlyContinue'
         Invoke-WebRequest wget $env:LLVM_REPO/releases/download/llvm-$env:LLVM_VERSION-ispc-dev/$env:LLVM_TAR -OutFile $env:LLVM_TAR
         7z.exe e ./$env:LLVM_TAR 
         echo "::add-path::$env:GITHUB_WORKSPACE/bin-$env:LLVM_VERSION/bin"
