--- a/.github/workflows/win-test.yml
+++ b/.github/workflows/win-test.yml
@@ -34,6 +34,8 @@ jobs:
       run: |
         wmic cpu get caption, deviceid, name, numberofcores, maxclockspeed, status
         echo %PATH%
+        dir C:\msys64
+        dir C:\msys64\bin
 
     - name: Build package
       run: |
