--- a/.github/workflows/win-test.yml
+++ b/.github/workflows/win-test.yml
@@ -33,9 +33,10 @@ jobs:
       shell: cmd
       run: |
         wmic cpu get caption, deviceid, name, numberofcores, maxclockspeed, status
+        python ./check_env.py
         echo %PATH%
         dir C:\msys64
-        dir C:\msys64\bin
+        dir C:\msys64\usr\bin
 
     - name: Build package
       run: |
