--- a/.github/workflows/linux-cmake-check.yml
+++ b/.github/workflows/linux-cmake-check.yml
@@ -102,3 +102,52 @@ jobs:
         name: cmake_cross_package_linux
         path: build/ispc-trunk-linux.tar.gz
 
+  # Cross build with package
+  linux-cross-package-3_19_2:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+      with:
+        submodules: true
+
+    - name: Install dependencies
+      run: |
+        echo "APT::Acquire::Retries \"3\";" | sudo tee -a /etc/apt/apt.conf.d/80-retries
+        sudo apt-get update
+        sudo apt-get install bison flex libc6-dev-i386 g++-multilib lib32stdc++6 ncurses-dev
+        wget --retry-connrefused --waitretry=5 --read-timeout=20 --timeout=15 -t 5 $LLVM_REPO/releases/download/llvm-$LLVM_VERSION-ispc-dev/$LLVM_TAR
+        tar xf $LLVM_TAR
+        echo "${GITHUB_WORKSPACE}/bin-$LLVM_VERSION/bin" >> $GITHUB_PATH
+        # Download and install cmake
+        wget --retry-connrefused --waitretry=5 --read-timeout=20 --timeout=15 -t 5 https://github.com/Kitware/CMake/releases/download/v3.19.2/cmake-3.19.2-Linux-x86_64.sh
+        chmod u+x cmake-3.19.2-Linux-x86_64.sh
+        mkdir ${GITHUB_WORKSPACE}/cmake_install
+        sudo ./cmake-3.19.2-Linux-x86_64.sh --skip-license --prefix=${GITHUB_WORKSPACE}/cmake_install
+        echo "${GITHUB_WORKSPACE}/cmake_install/bin" >> $GITHUB_PATH
+
+    - name: Check environment
+      run: |
+        ./check_env.py
+        which -a clang
+        cat /proc/cpuinfo
+
+    - name: Build package
+      run: |
+        echo PATH=$PATH
+        mkdir build && cd build
+        cmake .. -DISPC_CROSS=ON -DISPC_PREPARE_PACKAGE=ON
+        make -j4 package
+
+    - name: Sanity testing (make check-all, make test)
+      run: |
+        cd build
+        bin/check_isa
+        bin/ispc --support-matrix
+        make check-all
+
+    - name: Upload package
+      uses: actions/upload-artifact@v2
+      with:
+        name: cmake_cross_package_linux
+        path: build/ispc-trunk-linux.tar.gz
